# ApotekKasir

./: README.md  app_routes.py  create_admin.py  create_placeholder.py  database.py  dummy_data.py  main.py  migrate_database.py  migrate_models.py  migrate_prescriptions.py  migrate_reminder_system.py  models.py  pyproject.toml  replit.md  routes.py  sample_data.py  whatsapp_service.py
static/receive_dokter/: .gitkeep
templates/: add_batch.html  add_customer.html  add_doctor.html  add_medicine.html  base.html  categories.html  customer_waitlist.html  customers.html  dashboard.html  doctors.html  edit_customer.html  edit_doctor.html  edit_pharmacy_profile.html  inventory.html  login.html  notifications.html  pharmacy_profile.html  prescription_shortage_report.html  prescriptions.html  reports.html  restock.html  sales.html  whatsapp_settings.html
